{
  "version": 4,
  "terraform_version": "0.14.8",
  "serial": 45,
  "lineage": "b0f90d8d-8788-3b6e-8f7f-7bb03b912f24",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "natgw_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-02c1783ec151a91fb",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-108-128-123-67.eu-west-1.compute.amazonaws.com",
            "public_ip": "108.128.123.67",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "practica-aws-nat-gw-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c95efaa8fa6e2424",
            "arn": "arn:aws:ec2:eu-west-1:602976377309:instance/i-0b96642c06474efc7",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b96642c06474efc7",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "practica-aws-ec2-kp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0dc6d906693905b4a",
            "private_dns": "ip-10-0-3-60.eu-west-1.compute.internal",
            "private_ip": "10.0.3.60",
            "public_dns": "ec2-3-249-142-124.eu-west-1.compute.amazonaws.com",
            "public_ip": "3.249.142.124",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-089c2676a6c3e58d4",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e49244b144196b48",
            "tags": {
              "Name": "practica-aws-bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d3a3511ecda22e0f"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.security_group_bastion",
            "aws_subnet.public_subnet_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:602976377309:internet-gateway/igw-03e0ad73fd32d28d8",
            "id": "igw-03e0ad73fd32d28d8",
            "owner_id": "602976377309",
            "tags": {
              "Name": "practica-aws-igw"
            },
            "vpc_id": "vpc-01a678357270c7505"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "webapp_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:602976377309:loadbalancer/app/practica-aws-webapp-alb/eeb77364cc49d126",
            "arn_suffix": "app/practica-aws-webapp-alb/eeb77364cc49d126",
            "dns_name": "practica-aws-webapp-alb-663075718.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:602976377309:loadbalancer/app/practica-aws-webapp-alb/eeb77364cc49d126",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "practica-aws-webapp-alb",
            "security_groups": [
              "sg-05fa4d470970df48a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0e49244b144196b48"
              },
              {
                "subnet_id": "subnet-0fb6372e657dcb076"
              }
            ],
            "subnets": [
              "subnet-0e49244b144196b48",
              "subnet-0fb6372e657dcb076"
            ],
            "vpc_id": "vpc-01a678357270c7505",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.security_group_balancer",
            "aws_subnet.public_subnet_a",
            "aws_subnet.public_subnet_b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "webapp_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:602976377309:listener/app/practica-aws-webapp-alb/eeb77364cc49d126/a9e3e6d90c3e981b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:602976377309:targetgroup/practica-aws-webapp-tg/e8aa042e361e39a0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:602976377309:listener/app/practica-aws-webapp-alb/eeb77364cc49d126/a9e3e6d90c3e981b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:602976377309:loadbalancer/app/practica-aws-webapp-alb/eeb77364cc49d126",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.webapp_alb",
            "aws_lb_target_group.webapp_tg",
            "aws_security_group.security_group_balancer",
            "aws_subnet.public_subnet_a",
            "aws_subnet.public_subnet_b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "webapp_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:602976377309:targetgroup/practica-aws-webapp-tg/e8aa042e361e39a0",
            "arn_suffix": "targetgroup/practica-aws-webapp-tg/e8aa042e361e39a0",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 5,
                "matcher": "200",
                "path": "/api/utils/healthcheck",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 4,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:602976377309:targetgroup/practica-aws-webapp-tg/e8aa042e361e39a0",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "practica-aws-webapp-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01a678357270c7505"
          },
          "dependencies": [
            "aws_lb.webapp_alb",
            "aws_security_group.security_group_balancer",
            "aws_subnet.public_subnet_a",
            "aws_subnet.public_subnet_b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02c1783ec151a91fb",
            "id": "nat-0c7630112ea0df911",
            "network_interface_id": "eni-078efae1c28fe8d08",
            "private_ip": "10.0.3.154",
            "public_ip": "108.128.123.67",
            "subnet_id": "subnet-0e49244b144196b48",
            "tags": {
              "Name": "practica-aws-nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.natgw_eip",
            "aws_subnet.public_subnet_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0aa059f6984b222d3",
            "owner_id": "602976377309",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0c7630112ea0df911",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "practica-aws-private-rt"
            },
            "vpc_id": "vpc-01a678357270c7505"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.natgw_eip",
            "aws_nat_gateway.natgw",
            "aws_subnet.public_subnet_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09dc13d1bfb90bfc4",
            "owner_id": "602976377309",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03e0ad73fd32d28d8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "practica-aws-public-rt"
            },
            "vpc_id": "vpc-01a678357270c7505"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_associations_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3a23525896b1926",
            "route_table_id": "rtb-0aa059f6984b222d3",
            "subnet_id": "subnet-0466a165ea112a240"
          },
          "dependencies": [
            "aws_eip.natgw_eip",
            "aws_nat_gateway.natgw",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_a",
            "aws_subnet.public_subnet_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_associations_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4614f3f042e2d52",
            "route_table_id": "rtb-0aa059f6984b222d3",
            "subnet_id": "subnet-0bcaa47da714369ba"
          },
          "dependencies": [
            "aws_eip.natgw_eip",
            "aws_nat_gateway.natgw",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_b",
            "aws_subnet.public_subnet_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_associations_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c35df02a16534a4",
            "route_table_id": "rtb-09dc13d1bfb90bfc4",
            "subnet_id": "subnet-0e49244b144196b48"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_associations_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06cb9d468de0f873c",
            "route_table_id": "rtb-09dc13d1bfb90bfc4",
            "subnet_id": "subnet-0fb6372e657dcb076"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:602976377309:security-group/sg-05fa4d470970df48a",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-05fa4d470970df48a",
            "ingress": [],
            "name": "practica-aws-balancer-sg",
            "name_prefix": "",
            "owner_id": "602976377309",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "practica-aws-balancer-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a678357270c7505"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:602976377309:security-group/sg-0d3a3511ecda22e0f",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0d3a3511ecda22e0f",
            "ingress": [],
            "name": "practica-aws-bastion-sg",
            "name_prefix": "",
            "owner_id": "602976377309",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "practica-aws-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a678357270c7505"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_ddbb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:602976377309:security-group/sg-0d8f6d0de58917c30",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0d8f6d0de58917c30",
            "ingress": [],
            "name": "practica-aws-ddbb-sg",
            "name_prefix": "",
            "owner_id": "602976377309",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "practica-aws-ddbb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a678357270c7505"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_webapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:602976377309:security-group/sg-020321ab515112224",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-020321ab515112224",
            "ingress": [],
            "name": "practica-aws-webapp-sg",
            "name_prefix": "",
            "owner_id": "602976377309",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "practica-aws-webapp-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a678357270c7505"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "security_group_rule_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Acceso a instancias Webapp",
            "from_port": 3306,
            "id": "sgrule-1955757092",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d8f6d0de58917c30",
            "self": false,
            "source_security_group_id": "sg-020321ab515112224",
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.security_group_ddbb",
            "aws_security_group.security_group_webapp",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "security_group_rule_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Acceso a la base de datos Webapp",
            "from_port": 3306,
            "id": "sgrule-2094351624",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-020321ab515112224",
            "self": false,
            "source_security_group_id": "sg-0d8f6d0de58917c30",
            "to_port": 3306,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.security_group_ddbb",
            "aws_security_group.security_group_webapp",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "security_group_rule_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Acceso a Internet",
            "from_port": 0,
            "id": "sgrule-4281445472",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-020321ab515112224",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.security_group_webapp",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "security_group_rule_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Acceso al balanceador Webapp",
            "from_port": 8080,
            "id": "sgrule-2836526589",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-020321ab515112224",
            "self": false,
            "source_security_group_id": "sg-05fa4d470970df48a",
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.security_group_balancer",
            "aws_security_group.security_group_webapp",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "security_group_rule_5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Acceso a instancias Webapp",
            "from_port": 8080,
            "id": "sgrule-948581806",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05fa4d470970df48a",
            "self": false,
            "source_security_group_id": "sg-020321ab515112224",
            "to_port": 8080,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.security_group_balancer",
            "aws_security_group.security_group_webapp",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "security_group_rule_6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Webapp acceso publico",
            "from_port": 80,
            "id": "sgrule-2522227603",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05fa4d470970df48a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.security_group_balancer",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "security_group_rule_7",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "RDP acceso publico",
            "from_port": 3389,
            "id": "sgrule-979406206",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d3a3511ecda22e0f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3389,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.security_group_bastion",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "security_group_rule_8",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Acceso a Internet",
            "from_port": 0,
            "id": "sgrule-2065972291",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0d3a3511ecda22e0f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.security_group_bastion",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:602976377309:subnet/subnet-0466a165ea112a240",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0466a165ea112a240",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "602976377309",
            "tags": {
              "Name": "practica-aws-private-subnet-a"
            },
            "tags_all": {
              "Name": "practica-aws-private-subnet-a"
            },
            "vpc_id": "vpc-01a678357270c7505"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:602976377309:subnet/subnet-0bcaa47da714369ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0bcaa47da714369ba",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "602976377309",
            "tags": {
              "Name": "practica-aws-private-subnet-b"
            },
            "tags_all": {
              "Name": "practica-aws-private-subnet-b"
            },
            "vpc_id": "vpc-01a678357270c7505"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:602976377309:subnet/subnet-0e49244b144196b48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0e49244b144196b48",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "602976377309",
            "tags": {
              "Name": "practica-aws-public-subnet-a"
            },
            "tags_all": {
              "Name": "practica-aws-public-subnet-a"
            },
            "vpc_id": "vpc-01a678357270c7505"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:602976377309:subnet/subnet-0fb6372e657dcb076",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0fb6372e657dcb076",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "602976377309",
            "tags": {
              "Name": "practica-aws-public-subnet-b"
            },
            "tags_all": {
              "Name": "practica-aws-public-subnet-b"
            },
            "vpc_id": "vpc-01a678357270c7505"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:602976377309:vpc/vpc-01a678357270c7505",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-063fb4eb42c469191",
            "default_route_table_id": "rtb-0f13fd52db536c88d",
            "default_security_group_id": "sg-0b5c79e203f91bb95",
            "dhcp_options_id": "dopt-993730ff",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01a678357270c7505",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f13fd52db536c88d",
            "owner_id": "602976377309",
            "tags": {
              "Name": "practica-aws-vpc"
            },
            "tags_all": {
              "Name": "practica-aws-vpc"
            }
          }
        }
      ]
    }
  ]
}